--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 confy = "0.5.1"
+gtk4 = { version = "0.7.2", features = [ "v4_6" ] }
 serde = { version = "1.0.188", features = [ "derive" ] }
