Accept install requirements for deps

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install required libs for build
-        run: sudo apt install libgtk-4-dev libadwaita-1-dev
+        run: sudo apt install -y libgtk-4-dev libadwaita-1-dev
       - name: Build
         run: cargo build --verbose
       - name: Run tests
