--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install required libs for build
         run: sudo apt-get install -y libgtk-4-dev libadwaita-1-dev
+      - name: Run formatting check
+        run: cargo fmt --all -- --check
+      - name: Run lint
+        run: cargo clippy --all-features --all-targets
       - name: Build
         run: cargo build --verbose
       - name: Run tests
