Break up rust code into GTK and calculators

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ ktx = "1.13.1"
 lifecycle-runtime-ktx = "2.8.4"
 lifecycle-viewmodel-compose = "2.8.4"
 navigation = "2.8.0-beta07"
-androidGradlePlugin = "8.5.2"
+androidGradlePlugin = "8.6.0-alpha07"
 kotlin = "2.0.10"
 
 [libraries]
