--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,3 @@
-[package]
-name = "cost-calculator"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-adw = { version = "0.7.0", package = "libadwaita", features = ["gtk_v4_6"] }
-confy = "0.6.1"
-dirs = "5.0.1"
-gtk4 = { version = "0.9.0", features = ["v4_6"] }
-serde = { version = "1.0.200", features = ["derive"] }
-
-#log = "0.4"
-#android_logger = "0.13"
-#android-activity = { version = "0.5", features = ["native-activity"] }
-
-#[lib]
-#crate-type = ["cdylib"]
+[workspace]
+members = ["calculators", "gtk"]
+resolver = "2"
