--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,26 +2,28 @@
 activity-compose = "1.10.1"
 androidx-espressoCore = "3.6.1"
 androidx-junit = "1.2.1"
-composeBom = "2025.06.00"
-dataStoreVersion = "1.1.7"
+android-gradle-plugin = "8.10.1"
+compose = "1.8.2"
+compose-bom = "2025.06.00"
+compose-hot-reload = "1.0.0-alpha10"
+data-store-version = "1.1.7"
 junit = "4.13.2"
-kotlinxSerializationJson = "1.8.1"
+kotlin = "2.1.21"
+kotlinx-coroutine = "1.10.2"
+kotlinx-serialization-json = "1.8.1"
+ktoml = "0.7.0"
 ktx = "1.16.0"
 lifecycle-runtime-ktx = "2.9.1"
 lifecycle-viewmodel-compose = "2.9.1"
 navigation = "2.9.0"
 # Replace jetbrainsNavigation with navigation when released
-jetbrainsNavigation = "2.9.0-beta03"
-androidGradlePlugin = "8.10.1"
-kotlin = "2.1.21"
-compose = "1.8.2"
-composeHotReload = "1.0.0-alpha10"
+jetbrains-navigation = "2.9.0-beta03"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
-androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
-androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "dataStoreVersion" }
-androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "dataStoreVersion" }
+androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
+androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "data-store-version" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "data-store-version" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "ktx" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
@@ -38,18 +40,20 @@ androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 compose-lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel-compose" }
-jetbrains-androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "jetbrainsNavigation" }
+jetbrains-androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "jetbrains-navigation" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-espressoCore" }
 junit = { module = "junit:junit", version.ref = "junit" }
-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutine" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
+ktoml-core = { module = "com.akuleshov7:ktoml-core", version.ref = "ktoml" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
-android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
+android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-compose-hot-reload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
+compose-hot-reload = { id = "org.jetbrains.compose.hot-reload", version.ref = "compose-hot-reload" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
